Fix grass button icon
The matching background colour obsured the fact that the icon was not
covering a few pixels on the right of the button.

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h1 {
   background-position: 0px -80px;
 }
 .radio-toolbar-label#grass-button {
-  background-position: -122px 0px;
+  background-position: -119px 0px;
 }
 .radio-toolbar input[type="radio"] {
   display: none;
